# Home

./: .nvidia-settings-rc  .rtorrent.rc  .screenrc  .synergy.conf  .vimrc  .zsh_hist  .zsh_hist.archive  .zshrc  fresh_install  lircd.conf
.config/conky/: conky-rings.rc  conky_widgets.lua  high_noon.lua  moon.lua  rings.lua
.config/openbox/: autostart.sh  autostart.sh~  menu.xml  menu.xml~  rc.xml  rc.xml.bak  rc.xml~
.config/terminator/: config  config~
.irssi/: config  config.bak  config.test  config~  default.theme  fnotify
.irssi/scripts/: bitlbee_rename.pl
.irssi/scripts/autorun/: bitlbee_rename.pl
.newsbeuter/: cache.db  config  config.bak  queue  urls
.ssh/: authorized_keys  config
.vim/: .VimballRecord  .netrwhist
.vim/doc/: tags
.vim/ftplugin/: Viki.vim
.vim/plugin/: autoclose.vim
.vim/view/: ~=+Dropbox=+vo_README.otl=
.zsh/cache/: DEBS_avail  DEBS_installed
Downloads/installs/: DivFix++ One Click Install v0.01.ymp  Nurse.Jackie.S02E05.720p.HDTV.X264-DIMENSION.mkv.torrent  Regen.ini  divfix++_0.34-1_amd64.deb  divfix++_0.34-1_i386.deb  dualscreen-mouse-utils-0.5-4.fc11.i586.rpm  dualscreen-mouse-utils_0.5-5_i386.deb  fluxter-0.1.0.tar  gens_2.15.5_i386.deb  regen-gtk-0.95.tar.bz2  skippy-xd-0.5.0.tar
Downloads/installs/.dropbox-dist/: ACKNOWLEDGEMENTS  libdbus-1.so.3  libdbus-glib-1.so.2  libncurses.so.5  libsqlite3.so.0  libwx_baseud-2.8.so.0  libwx_gtk2ud_adv-2.8.so.0  libwx_gtk2ud_core-2.8.so.0
Downloads/installs/3ddeskfx-0.2.4/: readme.htm
Downloads/installs/3ddesktop-0.2.9/: 3ddesk  3ddesk.1  3ddesk.cpp  3ddesk.h  3ddeskd  3ddeskd.1  3ddeskd.cpp  3ddesktop.conf  3ddesktop.spec  3ddesktop.spec.in  AUTHORS  ChangeLog  INSTALL  MANIFEST  Makefile  Makefile.am  Makefile.in  README  README.windowmanagers  TODO  acinclude.m4  arrange.cpp  arrange.hpp  autogen.sh  camera.cpp  camera.hpp  config.cpp  config.diff  config.h  config.h.in  config.h.in~  config.hpp  config.status  configure  configure.ac  event.hpp  face.hpp  faceset.hpp  log.txt  maketar.sh  (+9 more)
Downloads/installs/3ddesktop-0.2.9/.deps/: 3ddesk.Po  3ddeskd.Po  arrange.Po  camera.Po  config.Po  util.Po  win.Po  xutil.Po
Downloads/installs/3ddesktop-0.2.9/autom4te.cache/: output.0  requests  traces.0
Downloads/installs/FacebookPlugIn-1.0.3/: FacebookPlugIn_Install.sh  LICENSE  README  README.cn  README.de  README.es  README.fr  README.it  README.jp  README.tr  README.tw
Downloads/installs/fluxspace-0.4.0_alpha/: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  bootstrap  config.h  config.h.in  config.status  configure  configure.in  fluxspace  libtool  version.h  version.h.in
Downloads/installs/fluxspace-0.4.0_alpha/contrib/: Makefile  Makefile.am  Makefile.in  randpaint-recursive.patch  randpaint.py
Downloads/installs/fluxspace-0.4.0_alpha/doc/: Makefile  Makefile.am  Makefile.in  index.html
Downloads/installs/fluxspace-0.4.0_alpha/examples/: Makefile  Makefile.am  Makefile.in  fluxspace.conf
Downloads/installs/fluxspace-0.4.0_alpha/fluxfeed/: Makefile  Makefile.am  Makefile.in  mailimap  quote
Downloads/installs/fluxspace-0.4.0_alpha/lib/: Makefile  Makefile.am  Makefile.in  fluxfeed.py  soapdispenser.py
Downloads/installs/fluxspace-0.4.0_alpha/lib/SOAPpy/: Client.py  Config.py  Errors.py  GSIServer.py  Makefile  Makefile.am  Makefile.in  NS.py  Parser.py  SOAP.py  SOAPBuilder.py  Server.py  Types.py  URLopener.py  Utilities.py  WSDL.py  __init__.py  version.py
Downloads/installs/fluxspace-0.4.0_alpha/lib/SOAPpy/wstools/: Makefile  Makefile.am  Makefile.in  Utility.py  WSDLTools.py  XMLSchema.py  __init__.py
Downloads/installs/fluxspace-0.4.0_alpha/lib/fluxlet/: Makefile  Makefile.am  Makefile.in  blank.py  clock.py  display.py  idesk.py  imap.py  painter.py  rox.py  runner.py  system.py  tracer.py
Downloads/installs/fluxspace-0.4.0_alpha/lib/fluxspace/: Makefile  Makefile.am  Makefile.in  config.py  ideskutil.py  process.py  version.in
Downloads/installs/fluxspace-0.4.0_alpha/src/: BaseDisplay.cc  BaseDisplay.hh  BitMask.cc  BitMask.hh  Esetroot.cc  Esetroot.hh  FluxboxUtility.cc  FluxboxUtility.hh  FluxspaceDisplay.cc  FluxspaceDisplay.hh  FluxspaceInterface.cc  FluxspaceInterface.hh  FluxspaceRenderer.cc  FluxspaceRenderer.hh  FluxspaceTheme.cc  FluxspaceTheme.hh  Makefile  Makefile.am  Makefile.in  MyPy.cc  MyPy.hh  OptionalData.hh  PythonInterface.cc  PythonInterface.hh  fluxspacecore.cc  fluxspacecore.hh  fluxspacecore.i  fluxspacecore.py  fluxspacecore_wrap.cxx
Downloads/installs/fluxspace-0.4.0_alpha/src/FbTk/: App.lo  Button.lo  Color.lo  Directory.lo  EventManager.lo  FbWindow.lo  Font.lo  ImageControl.lo  MacroCommand.lo  Makefile  Makefile.am  Makefile.in  Menu.lo  MenuItem.lo  MenuTheme.lo  MultLayers.lo  MultiButtonMenuItem.lo  Resource.lo  SignalHandler.lo  StringUtil.cc  StringUtil.loT  Text.lo  TextButton.lo  Texture.lo  TextureRender.cc  TextureRender.lo  Theme.lo  Timer.lo  XFontImp.cc  XFontImp.lo  XLayer.lo  XLayerItem.lo
Downloads/installs/fluxspace-0.4.0_alpha/src/FbTk/.deps/: App.Plo  Button.Plo  Color.Plo  Directory.Plo  EventManager.Plo  FbWindow.Plo  Font.Plo  ImageControl.Plo  MacroCommand.Plo  Menu.Plo  MenuItem.Plo  MenuTheme.Plo  MultLayers.Plo  MultiButtonMenuItem.Plo  Resource.Plo  SignalHandler.Plo  Text.Plo  TextButton.Plo  Texture.Plo  TextureRender.Plo  Theme.Plo  Timer.Plo  XFontImp.Plo  XLayer.Plo  XLayerItem.Plo
Downloads/installs/fluxspace-0.4.0_alpha/test/: Makefile  Makefile.am  Makefile.in  debug  fluxspace-debug-pid  fluxspace.conf  init  run  update-config-directory  verbose
Downloads/installs/fluxspace-0.4.0_alpha/tools/: Makefile  Makefile.am  Makefile.in  fluxspace-add-idesk-icon  fluxspace-add-rox-app  fluxspace-sync-idesk-with-appdirs
Downloads/installs/g15stats-1.9.3/: configure  g15stats.c
Downloads/installs/gsetroot-1.1/: AUTHORS  ChangeLog  Makefile.in  README  configure  configure.in  libtool
Downloads/installs/gtk+-2.4.0/: libtool
Downloads/installs/libg15-1.2.7/: Makefile  config.status  libg15.c  libg15.la  libtool
(+510 files in other folders)
